--- a/index.html
+++ b/index.html
@@ -64,16 +64,17 @@
     </footer>
 
 
-    <script type="module">
-        import { showUglyUIMessage, flashyIntro } from './app.js';
+<script type="module">
+  import { showUglyUIMessage, flashyIntro } from './app.js';
 
-        // Run on page load
-        window.addEventListener('DOMContentLoaded', flashyIntro);
+  // Run on page load
+  window.addEventListener('DOMContentLoaded', flashyIntro);
 
-        document.getElementById('showMessageBtn').addEventListener('click', () => {
-            showUglyUIMessage();
-        });
-    </script>
+  // Existing button behavior
+  document.getElementById('showMessageBtn').addEventListener('click', () => {
+    showUglyUIMessage();
+  });
+</script>
 
 </body>
 </html>
