--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yale School of Art — Ugly UI Example</title>
+    <title>Yale School of Art — Demo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,66 +11,51 @@
     <header>
         <h1>Yale School of Art Website</h1>
         <p style="text-align:center; color:#555;">
-            A study in intentionally “ugly” web design and how minimalism can improve user experience.
+            A study in intentionally “ugly” web design and minimalism.
         </p>
     </header>
 
-    <section>
-        <img src="yale_ui.png" alt="Screenshot of Yale School of Art Website">
-        <p style="text-align:center; font-size:0.95rem; color:#777;">
-            Screenshot of <a href="https://art.yale.edu" target="_blank">art.yale.edu</a>
-        </p>
-    </section>
-
-    <section>
+    <section id="whyUgly">
         <h2>Why the Design Looks “Ugly” (On Purpose)</h2>
-        <p>
-            The Yale School of Art’s official website is a famous example of <strong>brutalist web design</strong>. 
-            It embraces raw structure, clashing colors, and minimal visual polish to make a philosophical statement about 
-            <em>function, authorship, and artistic experimentation</em>.
-        </p>
-
+        <p>The Yale School of Art’s official website is a famous example of <strong>brutalist web design</strong>...</p>
         <ul>
-            <li><strong>Brutalist Aesthetic:</strong> Harsh color contrasts, oversized elements, and minimal alignment challenge modern design conventions.</li>
-            <li><strong>Collaborative Editing:</strong> The site functions like a wiki—any member of the Yale art community can edit or add content, leading to inconsistency.</li>
-            <li><strong>Philosophical Expression:</strong> The chaotic appearance is a deliberate act of rebellion against corporate and polished UI design.</li>
-            <li><strong>Low-Tech Authenticity:</strong> Built with basic HTML and CSS, the design highlights transparency and accessibility.</li>
+            <li><strong>Brutalist Aesthetic:</strong> Harsh contrasts and minimal alignment.</li>
+            <li><strong>Collaborative Editing:</strong> Any member can edit content.</li>
+            <li><strong>Philosophical Expression:</strong> Rebellion against polished UI.</li>
+            <li><strong>Low-Tech Authenticity:</strong> Built with basic HTML and CSS.</li>
         </ul>
     </section>
 
-    <section>
+    <section id="improve">
         <h2>How It Could Be Improved</h2>
         <ul>
-            <li>Adopt a consistent, neutral color palette for readability.</li>
-            <li>Use clear typography and establish visual hierarchy.</li>
-            <li>Apply spacing and grid layouts for structure and flow.</li>
-            <li>Ensure responsive design across devices.</li>
-            <li>Add subtle animations or transitions for a polished feel.</li>
+            <li>Consistent color palette for readability.</li>
+            <li>Clear typography and hierarchy.</li>
+            <li>Proper spacing and grid layout.</li>
+            <li>Responsive design across devices.</li>
+            <li>Subtle animations for polish.</li>
         </ul>
     </section>
 
-    <section>
-        <p>
-            Despite its seemingly “ugly” interface, the Yale School of Art website is a bold artistic statement about 
-            digital self-expression. It reminds designers that <strong>web design can be both art and communication</strong>, 
-            and that beauty in design is often defined by purpose.
-        </p>
+    <section id="about">
+        <p>Despite its “ugly” interface, the website is a bold artistic statement...</p>
     </section>
 
     <footer>
         <p>Designed for demonstration purposes.</p>
-        <!-- New interactive button -->
-        <button id="showMessageBtn">Show Console Message</button>
+        <button id="showMessageBtn">Show Message</button>
     </footer>
 
-
 <script type="module">
-  import { showUglyUIMessage, flashyIntro } from './app.js';
+  import { showUglyUIMessage, showLoadingScreen, initHeaderNav } from './app.js';
 
-  // Run on page load
-  window.addEventListener('DOMContentLoaded', flashyIntro);
+  // Show modern loading screen on page load
+  window.addEventListener('DOMContentLoaded', () => {
+    showLoadingScreen();
+    initHeaderNav();
+  });
 
-  // Existing button behavior
+  // Button behavior
   document.getElementById('showMessageBtn').addEventListener('click', () => {
     showUglyUIMessage();
   });
