--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yale School of Art</title>
+    <title>Yale School of Art - SEN10</title>
 
-    <!-- Modern font: Inter & Roboto -->
+    <!-- Modern font: Inter + Roboto -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -22,6 +22,7 @@
     <!-- Navigation Header -->
     <nav id="headerNav">
         <ul>
+            <li><a href="#screenshot">Screenshot</a></li>
             <li><a href="#whyUgly">Why Ugly</a></li>
             <li><a href="#improve">Improvements</a></li>
             <li><a href="#about">About</a></li>
@@ -30,7 +31,7 @@
 
     <!-- Yale screenshot -->
     <section id="screenshot">
-        <img src="yale_ui.png" alt="Screenshot of Yale School of Art Website" class="centered-img">
+        <img src="./yale_ui.png" alt="Screenshot of Yale School of Art Website" class="centered-img">
         <p class="caption">
             Screenshot of <a href="https://art.yale.edu" target="_blank">art.yale.edu</a>
         </p>
@@ -38,8 +39,8 @@
 
     <section id="whyUgly">
         <h2>Why the Design Looks “Ugly” (On Purpose)</h2>
-        <p>The Yale School of Art’s official website is a famous example of <strong>brutalist web design</strong>. 
-           It embraces raw structure, clashing colors, and minimal visual polish to make a philosophical statement about function and artistic experimentation.
+        <p>The Yale School of Art’s website is a famous example of <strong>brutalist web design</strong>. 
+           It embraces raw structure, clashing colors, and minimal visual polish to make a philosophical statement.
         </p>
         <ul>
             <li><strong>Brutalist Aesthetic:</strong> Harsh contrasts and minimal alignment.</li>
@@ -72,18 +73,20 @@
         <button id="showMessageBtn">Show Message</button>
     </footer>
 
-<script type="module">
-  import { showUglyUIMessage, showLoadingScreen, initHeaderNav } from './app.js';
+    <!-- JS modules -->
+    <script type="module" src="./app.js"></script>
+    <script type="module">
+      import { showUglyUIMessage, showLoadingScreen, initHeaderNav } from './app.js';
 
-  window.addEventListener('DOMContentLoaded', () => {
-    showLoadingScreen();
-    initHeaderNav();
-  });
+      window.addEventListener('DOMContentLoaded', () => {
+        showLoadingScreen();
+        initHeaderNav();
+      });
 
-  document.getElementById('showMessageBtn').addEventListener('click', () => {
-    showUglyUIMessage();
-  });
-</script>
+      document.getElementById('showMessageBtn').addEventListener('click', () => {
+        showUglyUIMessage();
+      });
+    </script>
 
 </body>
 </html>
