--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yale School of Art — SEN10</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -69,7 +70,7 @@
       showLoadingScreen();       // show loader
       initHeaderNav();           // initialize header nav
       modernHeaderAnimation();   // subtle gradient header
-      animateSectionHeadings();  // pulse section headings
+      animateSectionHeadings();  // gentle pulse section headings
     });
 
     document.getElementById('showMessageBtn').addEventListener('click', () => {
