Initial commit with fixed image path

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
 
   <section id="screenshot">
-    <img src="./images/yale_ui.png" alt="Screenshot of Yale School of Art Website" class="centered-img">
+    <img src="./yale_ui.png" alt="Screenshot of Yale School of Art Website" class="centered-img">
     <p class="caption">
       Screenshot of <a href="https://art.yale.edu" target="_blank">art.yale.edu</a>
     </p>
