--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Yale School of Art — SEN10</title>
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script type="module">
+    import { showLoadingScreen, initHeaderNav, showUglyUIMessage } from './app.js';
+    window.addEventListener('DOMContentLoaded', () => {
+      showLoadingScreen();
+      initHeaderNav();
+      showUglyUIMessage();
+    });
+  </script>
 </head>
 <body>
 
