--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <h1>Yale School of Art Website</h1>
-    <p style="text-align:center; color:#555;">
+    <p style="text-align:center; color:#ffffff;">
       A study in intentionally “ugly” web design and how minimalism can improve user experience.
     </p>
   </header>
